--- a/1-10/1. 两数之和.md
+++ b/1-10/1. 两数之和.md
@@ -72,6 +72,25 @@ class Solution {
 
 #### 代码
 
+C++
+
+```C++
+class Solution {
+public:
+    vector<int> twoSum(vector<int>& nums, int target) {
+        unordered_map<int,int> heap;
+        for(int i=0;i<nums.size();i++){
+            int r = target-nums[i];
+            if(heap.count(r)) return {heap[r],i};
+            heap[nums[i]] = i;
+        }
+        return {};
+    }
+};
+```
+
+Java
+
 ```java
 class Solution {
     public int[] twoSum(int[] nums, int target) {
@@ -102,4 +121,3 @@ class Solution {
 
 来源：力扣（LeetCode）
 链接：https://leetcode.cn/problems/two-sum
-著作权归领扣网络所有。商业转载请联系官方授权，非商业转载请注明出处。
