第83场双周赛

--- a/Leetcode刷题/1-10/5. 最长回文子串.md
+++ b/Leetcode刷题/1-10/5. 最长回文子串.md
@@ -34,6 +34,38 @@ s 仅由数字和英文字母组成
 
 #### 代码
 
+C++
+
+```C++
+class Solution {
+public:
+    string longestPalindrome(string s) {
+        string res="";
+        int len = s.length();
+        for(int i=0;i<len;i++){
+            int l=i,r=i;
+            while(l>=0&&l<len&&r>=0&&r<len&&s[l]==s[r]){
+                l--;
+                r++;
+            }
+            if(r-l-1>res.length()) res = s.substr(l+1,r-l-1);
+            l=i,r=i+1;
+            while(l>=0&&l<len&&r>=0&&r<len&&s[l]==s[r]){
+                l--;
+                r++;
+            }
+            if(r-l-1>res.length()) res = s.substr(l+1,r-l-1);
+        }
+        return res;
+
+    }
+};
+```
+
+
+
+Java
+
 ```Java
 class Solution {
     public String longestPalindrome(String s) {
