--- a/双周赛/第83场/6131. 不可能得到的最短骰子序列（hard）.md
+++ b/双周赛/第83场/6131. 不可能得到的最短骰子序列（hard）.md
@@ -54,7 +54,7 @@
 
 如果想找到长度为一的则1到k都要出现过，这个区间内最后一个元素就是最晚出现的元素即包含1-k的最后一个出现的元素，长度为二的肯定在这个数后面找，也即第二段也需要找到最晚的一个数使得第二个区间包含1-k,依次类推，看能找到几段就可以得出答案。
 
-![image-20220724130508698](../../img/20220724_13-04-31.png)
+![image-20220724130508698](img/20220724_13-04-31.png)
 
 #### 代码
 
